feat(history): history init